# snps-clang-tidy-plugin

./: .gitignore  CMakeLists.txt  README.md  installClang15.sh
.github/workflows/: testCheckers.yml
src/: CMakeLists.txt
src/snps/: CMakeLists.txt  SnpsModule.cpp
src/snps/AvoidCurrentTime/: AvoidCurrentTimeCheck.cpp  CMakeLists.txt
src/snps/AvoidCurrentTime/include/: AvoidCurrentTimeCheck.h
src/snps/test/: AvoidCurrentTimeCheck_test.cpp  CMakeLists.txt  run_clang_tidy_tests.sh
